--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,9 @@ numpy = "*"
 scipy = "*"
 seaborn = "*"
 jupyterlab = "*"
+python-dotenv = "*"
+sqlalchemy = "*"
+psycopg2-binary = "*"
 
 [requires]
 python_version = "3"
