--- a/Pipfile
+++ b/Pipfile
@@ -22,6 +22,9 @@ sqlalchemy = "*"
 psycopg2-binary = "*"
 pandas-stubs = "*"
 prince = "*"
+pytest = "*"
+pytest-cov = "*"
+pytest-mock = "*"
 
 [requires]
 python_version = "3"
