--- a/Pipfile
+++ b/Pipfile
@@ -12,8 +12,8 @@ pre-commit = "*"
 
 [packages]
 wandb = "*"
-pandas = "*"
-numpy = "*"
+pandas = "2.1.4"
+numpy = "1.26.4"
 scipy = "*"
 seaborn = "*"
 jupyterlab = "*"
@@ -25,6 +25,7 @@ prince = "*"
 pytest = "*"
 pytest-cov = "*"
 pytest-mock = "*"
+SQLAlchemy = "<2.0"
 
 [requires]
 python_version = "3"
