--- a/requirements.txt
+++ b/requirements.txt
@@ -1,120 +1,260 @@
-annotated-types==0.7.0; python_version >= "3.8"
-anyio==4.9.0; python_version >= "3.9"
-argon2-cffi==23.1.0; python_version >= "3.7"
-argon2-cffi-bindings==21.2.0; python_version >= "3.6"
-arrow==1.3.0; python_version >= "3.8"
-asttokens==3.0.0; python_version >= "3.8"
-async-lru==2.0.5; python_version >= "3.9"
-attrs==25.3.0; python_version >= "3.8"
-babel==2.17.0; python_version >= "3.8"
-beautifulsoup4==4.13.3; python_full_version >= "3.7.0"
-bleach[css]==6.2.0; python_version >= "3.9"
-certifi==2025.1.31; python_version >= "3.6"
-cffi==1.17.1; python_version >= "3.8"
-charset-normalizer==3.4.1; python_version >= "3.7"
-click==8.1.8; python_version >= "3.7"
-comm==0.2.2; python_version >= "3.8"
-contourpy==1.3.1; python_version >= "3.10"
-cycler==0.12.1; python_version >= "3.8"
-debugpy==1.8.13; python_version >= "3.8"
-decorator==5.2.1; python_version >= "3.8"
-defusedxml==0.7.1; python_version >= "2.7" and python_version not in "3.0, 3.1, 3.2, 3.3, 3.4"
+aiohappyeyeballs==2.3.5
+aiohttp==3.10.3
+aiosignal==1.3.1
+alembic==1.13.2
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.4.0
+apache-airflow==2.10.0
+apache-airflow-providers-common-compat==1.1.0
+apache-airflow-providers-common-io==1.4.0
+apache-airflow-providers-common-sql==1.15.0
+apache-airflow-providers-fab==1.2.2
+apache-airflow-providers-ftp==3.10.1
+apache-airflow-providers-http==4.12.0
+apache-airflow-providers-imap==3.6.1
+apache-airflow-providers-smtp==1.7.1
+apache-airflow-providers-sqlite==3.8.2
+apispec==6.6.1
+appdirs==1.4.4
+argcomplete==3.5.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asgiref==3.8.1
+astroid==3.3.9
+asttokens==3.0.0
+async-lru==2.0.5
+attrs==24.2.0
+autoflake==2.3.1
+babel==2.16.0
+beautifulsoup4==4.13.3
+black==21.7b0
+bleach==6.2.0
+blinker==1.8.2
+cachelib==0.9.0
+certifi==2024.7.4
+cffi==1.17.0
+cfgv==3.4.0
+charset-normalizer==3.3.2
+click==8.1.7
+clickclick==20.10.2
+colorama==0.4.6
+colorlog==6.8.2
+comm==0.2.2
+ConfigUpdater==3.2
+connexion==2.14.2
+contourpy==1.3.1
+coverage==7.8.0
+cron-descriptor==1.4.3
+croniter==3.0.3
+cryptography==41.0.7
+cycler==0.12.1
+debugpy==1.8.13
+decorator==5.2.1
+defusedxml==0.7.1
+Deprecated==1.2.14
+dill==0.3.8
+distlib==0.3.9
+dnspython==2.6.1
 docker-pycreds==0.4.0
-executing==2.2.0; python_version >= "3.8"
+docutils==0.16
+email_validator==2.2.0
+executing==2.2.0
 fastjsonschema==2.21.1
-fonttools==4.56.0; python_version >= "3.8"
-fqdn==1.5.1; python_version >= "2.7" and python_version not in "3.0, 3.1, 3.2, 3.3, 3.4" and python_version < "4"
-gitdb==4.0.12; python_version >= "3.7"
-gitpython==3.1.44; python_version >= "3.7"
-greenlet==3.1.1; python_version >= "3.7"
-h11==0.14.0; python_version >= "3.7"
-httpcore==1.0.7; python_version >= "3.8"
-httpx==0.28.1; python_version >= "3.8"
-idna==3.10; python_version >= "3.6"
-ipykernel==6.29.5; python_version >= "3.8"
-ipython==9.0.2; python_version >= "3.11"
-ipython-pygments-lexers==1.1.1; python_version >= "3.8"
-isoduration==20.11.0; python_version >= "3.7"
-jedi==0.19.2; python_version >= "3.6"
-jinja2==3.1.6; python_version >= "3.7"
-json5==0.10.0; python_full_version >= "3.8.0"
-jsonpointer==3.0.0; python_version >= "3.7"
-jsonschema[format-nongpl]==4.23.0; python_version >= "3.8"
-jsonschema-specifications==2024.10.1; python_version >= "3.9"
-jupyter-client==8.6.3; python_version >= "3.8"
-jupyter-core==5.7.2; python_version >= "3.8"
-jupyter-events==0.12.0; python_version >= "3.9"
-jupyter-lsp==2.2.5; python_version >= "3.8"
-jupyter-server==2.15.0; python_version >= "3.9"
-jupyter-server-terminals==0.5.3; python_version >= "3.8"
-jupyterlab==4.3.6; python_version >= "3.8"
-jupyterlab-pygments==0.3.0; python_version >= "3.8"
-jupyterlab-server==2.27.3; python_version >= "3.8"
-kiwisolver==1.4.8; python_version >= "3.10"
-markupsafe==3.0.2; python_version >= "3.9"
-matplotlib==3.10.1; python_version >= "3.10"
-matplotlib-inline==0.1.7; python_version >= "3.8"
-mistune==3.1.3; python_version >= "3.8"
-nbclient==0.10.2; python_full_version >= "3.9.0"
-nbconvert==7.16.6; python_version >= "3.8"
-nbformat==5.10.4; python_version >= "3.8"
-nest-asyncio==1.6.0; python_version >= "3.5"
-notebook-shim==0.2.4; python_version >= "3.7"
-numpy==2.2.4; python_version >= "3.10"
-overrides==7.7.0; python_version >= "3.6"
-packaging==24.2; python_version >= "3.8"
-pandas==2.2.3; python_version >= "3.9"
-pandocfilters==1.5.1; python_version >= "2.7" and python_version not in "3.0, 3.1, 3.2, 3.3"
-parso==0.8.4; python_version >= "3.6"
-pexpect==4.9.0; sys_platform != "win32" and sys_platform != "emscripten"
-pillow==11.1.0; python_version >= "3.9"
-platformdirs==4.3.7; python_version >= "3.9"
-prometheus-client==0.21.1; python_version >= "3.8"
-prompt-toolkit==3.0.50; python_full_version >= "3.8.0"
-protobuf==5.29.4; python_version >= "3.8"
-psutil==7.0.0; python_version >= "3.6"
-psycopg2-binary==2.9.10; python_version >= "3.8"
-ptyprocess==0.7.0; os_name != "nt"
-pure-eval==0.2.3
-pycparser==2.22; python_version >= "3.8"
-pydantic==2.10.6; python_version >= "3.8"
-pydantic-core==2.27.2; python_version >= "3.8"
-pygments==2.19.1; python_version >= "3.8"
-pyparsing==3.2.1; python_version >= "3.9"
-python-dateutil==2.9.0.post0; python_version >= "2.7" and python_version not in "3.0, 3.1, 3.2"
-python-dotenv==1.0.1; python_version >= "3.8"
-python-json-logger==3.3.0; python_version >= "3.8"
-pytz==2025.1
-pyyaml==6.0.2; python_version >= "3.8"
-pyzmq==26.3.0; python_version >= "3.8"
-referencing==0.36.2; python_version >= "3.9"
-requests==2.32.3; python_version >= "3.8"
-rfc3339-validator==0.1.4; python_version >= "2.7" and python_version not in "3.0, 3.1, 3.2, 3.3, 3.4"
-rfc3986-validator==0.1.1; python_version >= "2.7" and python_version not in "3.0, 3.1, 3.2, 3.3, 3.4"
-rpds-py==0.23.1; python_version >= "3.9"
-scipy==1.15.2; python_version >= "3.10"
-seaborn==0.13.2; python_version >= "3.8"
-send2trash==1.8.3; python_version >= "2.7" and python_version not in "3.0, 3.1, 3.2, 3.3, 3.4, 3.5"
-sentry-sdk==2.24.0; python_version >= "3.6"
-setproctitle==1.3.5; python_version >= "3.8"
-setuptools==77.0.3; python_version >= "3.9"
-six==1.17.0; python_version >= "2.7" and python_version not in "3.0, 3.1, 3.2"
-smmap==5.0.2; python_version >= "3.7"
-sniffio==1.3.1; python_version >= "3.7"
-soupsieve==2.6; python_version >= "3.8"
-sqlalchemy==2.0.39; python_version >= "3.7"
+filelock==3.18.0
+Flask==2.2.5
+Flask-AppBuilder==4.5.0
+Flask-Babel==2.0.0
+Flask-Caching==2.3.0
+Flask-JWT-Extended==4.6.0
+Flask-Limiter==3.8.0
+Flask-Login==0.6.3
+Flask-Session==0.5.0
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.2.1
+fonttools==4.56.0
+fqdn==1.5.1
+frozenlist==1.4.1
+fsspec==2024.6.1
+gitdb==4.0.12
+GitPython==3.1.44
+google-re2==1.1.20240702
+googleapis-common-protos==1.63.2
+greenlet==3.0.3
+grpcio==1.65.4
+gunicorn==23.0.0
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
+identify==2.6.9
+idna==3.7
+importlib-metadata==6.11.0
+importlib_resources==6.4.0
+inflection==0.5.1
+iniconfig==2.1.0
+ipykernel==6.29.5
+ipython==9.0.2
+ipython_pygments_lexers==1.1.1
+isoduration==20.11.0
+isort==6.0.1
+itsdangerous==2.2.0
+jedi==0.19.2
+Jinja2==3.1.4
+jmespath==0.10.0
+joblib==1.4.2
+json5==0.10.0
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+jupyter-events==0.12.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyter_server==2.15.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.3.6
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+kiwisolver==1.4.8
+lazy-object-proxy==1.10.0
+limits==3.13.0
+linkify-it-py==2.0.3
+lockfile==0.12.2
+Mako==1.3.5
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+marshmallow==3.21.3
+marshmallow-oneofschema==3.1.1
+marshmallow-sqlalchemy==0.28.2
+matplotlib==3.10.1
+matplotlib-inline==0.1.7
+mccabe==0.7.0
+mdit-py-plugins==0.4.1
+mdurl==0.1.2
+methodtools==0.4.7
+mistune==3.1.3
+more-itertools==10.4.0
+multidict==6.0.5
+mypy==1.15.0
+mypy-extensions==1.0.0
+narwhals==1.34.0
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+nest-asyncio==1.6.0
+nodeenv==1.9.1
+notebook_shim==0.2.4
+numpy==1.26.4
+opentelemetry-api==1.26.0
+opentelemetry-exporter-otlp==1.26.0
+opentelemetry-exporter-otlp-proto-common==1.26.0
+opentelemetry-exporter-otlp-proto-grpc==1.26.0
+opentelemetry-exporter-otlp-proto-http==1.26.0
+opentelemetry-proto==1.26.0
+opentelemetry-sdk==1.26.0
+opentelemetry-semantic-conventions==0.47b0
+ordered-set==4.1.0
+overrides==7.7.0
+packaging==24.1
+pandas==2.1.4
+pandas-stubs==2.2.3.250308
+pandocfilters==1.5.1
+parso==0.8.4
+pathspec==0.12.1
+pendulum==3.0.0
+pexpect==4.9.0
+pillow==11.1.0
+pipfile-requirements==0.3.0
+platformdirs==4.3.7
+pluggy==1.5.0
+pre_commit==4.2.0
+prince==0.13.1
+prison==0.2.1
+prometheus_client==0.21.1
+prompt_toolkit==3.0.50
+protobuf==4.25.4
+psutil==6.0.0
+psycopg2-binary==2.9.10
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pycparser==2.22
+pydantic==2.10.6
+pydantic_core==2.27.2
+pyflakes==3.3.2
+Pygments==2.18.0
+PyJWT==2.9.0
+pylint==3.3.6
+pyparsing==3.2.1
+pytest==8.3.5
+pytest-cov==6.1.1
+pytest-mock==3.14.0
+python-daemon==3.0.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-json-logger==3.3.0
+python-nvd3==0.16.0
+python-slugify==8.0.4
+pytz==2024.1
+PyYAML==6.0.2
+pyzmq==26.3.0
+referencing==0.35.1
+regex==2024.11.6
+requests==2.32.3
+requests-toolbelt==1.0.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.7.1
+rich-argparse==1.5.2
+rpds-py==0.20.0
+scikit-learn==1.6.1
+scipy==1.15.2
+seaborn==0.13.2
+Send2Trash==1.8.3
+sentry-sdk==2.24.0
+setproctitle==1.3.3
+setuptools==66.1.1
+six==1.16.0
+smmap==5.0.2
+sniffio==1.3.1
+soupsieve==2.6
+SQLAlchemy==1.4.53
+SQLAlchemy-JSONField==1.0.2
+sqlalchemy-stubs==0.4
+SQLAlchemy-Utils==0.41.2
+sqlparse==0.5.1
 stack-data==0.6.3
-terminado==0.18.1; python_version >= "3.8"
-tinycss2==1.4.0; python_version >= "3.8"
-tornado==6.4.2; python_version >= "3.8"
-traitlets==5.14.3; python_version >= "3.8"
-types-python-dateutil==2.9.0.20241206; python_version >= "3.8"
-typing-extensions==4.12.2; python_version >= "3.8"
-tzdata==2025.1; python_version >= "2"
-uri-template==1.3.0; python_version >= "3.7"
-urllib3==2.3.0; python_version >= "3.9"
-wandb==0.19.8; python_version >= "3.8"
+tabulate==0.9.0
+tenacity==8.5.0
+termcolor==2.4.0
+terminado==0.18.1
+text-unidecode==1.3
+threadpoolctl==3.6.0
+time-machine==2.15.0
+tinycss2==1.4.0
+toml==0.10.2
+tomli==1.2.3
+tomlkit==0.13.2
+tornado==6.4.2
+traitlets==5.14.3
+types-python-dateutil==2.9.0.20241206
+types-pytz==2025.2.0.20250326
+typing_extensions==4.12.2
+tzdata==2024.1
+uc-micro-py==1.0.3
+unicodecsv==0.14.1
+universal_pathlib==0.2.2
+uri-template==1.3.0
+urllib3==2.2.2
+virtualenv==20.30.0
+wandb==0.19.8
 wcwidth==0.2.13
-webcolors==24.11.1; python_version >= "3.9"
+webcolors==24.11.1
 webencodings==0.5.1
-websocket-client==1.8.0; python_version >= "3.8"
+websocket-client==1.8.0
+Werkzeug==2.2.3
+wirerope==0.4.7
+wrapt==1.16.0
+WTForms==3.1.2
+yarl==1.9.4
+zipp==3.20.0
