--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,4 @@ client_secrets.json
 saved_credentials.jsondeactivate
 client_secrets.json
 saved_credentials.jsondeactivate
+client_secrets.json:Zone.Identifier
