--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,14 @@
-aiohappyeyeballs==2.3.5
-aiohttp==3.10.3
-aiosignal==1.3.1
-alembic==1.13.2
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiosignal==1.3.2
+aiosqlite==0.20.0
+alembic==1.14.1
 altair==5.5.0
 annotated-types==0.7.0
-anyio==4.4.0
-apache-airflow==2.10.0
-apache-airflow-providers-common-compat==1.1.0
-apache-airflow-providers-common-io==1.4.0
-apache-airflow-providers-common-sql==1.15.0
-apache-airflow-providers-fab==1.2.2
-apache-airflow-providers-ftp==3.10.1
-apache-airflow-providers-http==4.12.0
-apache-airflow-providers-imap==3.6.1
-apache-airflow-providers-smtp==1.7.1
-apache-airflow-providers-sqlite==3.8.2
-apispec==6.6.1
+anyio==4.8.0
+apispec==6.8.1
 appdirs==1.4.4
-argcomplete==3.5.0
+argcomplete==3.5.3
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
@@ -25,38 +16,39 @@ asgiref==3.8.1
 astroid==3.3.9
 asttokens==3.0.0
 async-lru==2.0.5
-attrs==24.2.0
+attrs==25.1.0
 autoflake==2.3.1
-babel==2.16.0
+babel==2.17.0
 beautifulsoup4==4.13.3
 black==21.7b0
 bleach==6.2.0
-blinker==1.8.2
+blinker==1.9.0
 cachelib==0.9.0
-certifi==2024.7.4
-cffi==1.17.0
+cachetools==5.5.2
+certifi==2025.1.31
+cffi==1.17.1
 cfgv==3.4.0
-charset-normalizer==3.3.2
-click==8.1.7
+charset-normalizer==3.4.1
+click==8.1.8
 clickclick==20.10.2
 colorama==0.4.6
-colorlog==6.8.2
+colorlog==6.9.0
 comm==0.2.2
 ConfigUpdater==3.2
 connexion==2.14.2
 contourpy==1.3.1
 coverage==7.8.0
-cron-descriptor==1.4.3
-croniter==3.0.3
-cryptography==41.0.7
+cron-descriptor==1.4.5
+croniter==6.0.0
+cryptography==42.0.8
 cycler==0.12.1
 debugpy==1.8.13
 decorator==5.2.1
 defusedxml==0.7.1
-Deprecated==1.2.14
-dill==0.3.8
+Deprecated==1.2.18
+dill==0.3.9
 distlib==0.3.9
-dnspython==2.6.1
+dnspython==2.7.0
 docker-pycreds==0.4.0
 docutils==0.16
 email_validator==2.2.0
@@ -64,31 +56,37 @@ executing==2.2.0
 fastjsonschema==2.21.1
 filelock==3.18.0
 Flask==2.2.5
-Flask-AppBuilder==4.5.0
+Flask-AppBuilder==4.5.2
 Flask-Babel==2.0.0
 Flask-Caching==2.3.0
-Flask-JWT-Extended==4.6.0
-Flask-Limiter==3.8.0
+Flask-JWT-Extended==4.7.1
+Flask-Limiter==3.10.1
 Flask-Login==0.6.3
 Flask-Session==0.5.0
 Flask-SQLAlchemy==2.5.1
-Flask-WTF==1.2.1
+Flask-WTF==1.2.2
 fonttools==4.56.0
 fqdn==1.5.1
-frozenlist==1.4.1
-fsspec==2024.6.1
+frozenlist==1.5.0
+fsspec==2025.2.0
+git-filter-repo==2.47.0
 gitdb==4.0.12
 GitPython==3.1.44
+google-api-core==2.24.2
+google-api-python-client==2.166.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
 google-re2==1.1.20240702
-googleapis-common-protos==1.63.2
-greenlet==3.0.3
-grpcio==1.65.4
+googleapis-common-protos==1.66.0
+greenlet==3.1.1
+grpcio==1.70.0
 gunicorn==23.0.0
 h11==0.14.0
-httpcore==1.0.5
+httpcore==1.0.7
+httplib2==0.22.0
 httpx==0.27.0
 identify==2.6.9
-idna==3.7
+idna==3.10
 importlib-metadata==6.11.0
 importlib_resources==6.4.0
 inflection==0.5.1
@@ -100,13 +98,13 @@ isoduration==20.11.0
 isort==6.0.1
 itsdangerous==2.2.0
 jedi==0.19.2
-Jinja2==3.1.4
+Jinja2==3.1.5
 jmespath==0.10.0
 joblib==1.4.2
 json5==0.10.0
 jsonpointer==3.0.0
 jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
+jsonschema-specifications==2024.10.1
 jupyter-events==0.12.0
 jupyter-lsp==2.2.5
 jupyter_client==8.6.3
@@ -118,24 +116,24 @@ jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 kiwisolver==1.4.8
 lazy-object-proxy==1.10.0
-limits==3.13.0
+limits==4.0.1
 linkify-it-py==2.0.3
 lockfile==0.12.2
-Mako==1.3.5
+Mako==1.3.8
 markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-marshmallow==3.21.3
+MarkupSafe==3.0.2
+marshmallow==3.26.0
 marshmallow-oneofschema==3.1.1
 marshmallow-sqlalchemy==0.28.2
 matplotlib==3.10.1
 matplotlib-inline==0.1.7
 mccabe==0.7.0
-mdit-py-plugins==0.4.1
+mdit-py-plugins==0.4.2
 mdurl==0.1.2
 methodtools==0.4.7
 mistune==3.1.3
-more-itertools==10.4.0
-multidict==6.0.5
+more-itertools==10.6.0
+multidict==6.1.0
 mypy==1.15.0
 mypy-extensions==1.0.0
 narwhals==1.34.0
@@ -146,17 +144,18 @@ nest-asyncio==1.6.0
 nodeenv==1.9.1
 notebook_shim==0.2.4
 numpy==1.26.4
-opentelemetry-api==1.26.0
-opentelemetry-exporter-otlp==1.26.0
-opentelemetry-exporter-otlp-proto-common==1.26.0
-opentelemetry-exporter-otlp-proto-grpc==1.26.0
-opentelemetry-exporter-otlp-proto-http==1.26.0
-opentelemetry-proto==1.26.0
-opentelemetry-sdk==1.26.0
-opentelemetry-semantic-conventions==0.47b0
+oauth2client==4.1.3
+opentelemetry-api==1.27.0
+opentelemetry-exporter-otlp==1.27.0
+opentelemetry-exporter-otlp-proto-common==1.27.0
+opentelemetry-exporter-otlp-proto-grpc==1.27.0
+opentelemetry-exporter-otlp-proto-http==1.27.0
+opentelemetry-proto==1.27.0
+opentelemetry-sdk==1.27.0
+opentelemetry-semantic-conventions==0.48b0
 ordered-set==4.1.0
 overrides==7.7.0
-packaging==24.1
+packaging==24.2
 pandas==2.1.4
 pandas-stubs==2.2.3.250308
 pandocfilters==1.5.1
@@ -173,64 +172,71 @@ prince==0.13.1
 prison==0.2.1
 prometheus_client==0.21.1
 prompt_toolkit==3.0.50
-protobuf==4.25.4
-psutil==6.0.0
+propcache==0.2.1
+proto-plus==1.26.1
+protobuf==4.25.6
+psutil==6.1.1
 psycopg2-binary==2.9.10
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
+PyDrive2==1.21.3
 pyflakes==3.3.2
-Pygments==2.18.0
-PyJWT==2.9.0
+Pygments==2.19.1
+PyJWT==2.10.1
 pylint==3.3.6
+pyOpenSSL==24.2.1
 pyparsing==3.2.1
 pytest==8.3.5
 pytest-cov==6.1.1
 pytest-mock==3.14.0
-python-daemon==3.0.1
+python-daemon==3.1.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-json-logger==3.3.0
 python-nvd3==0.16.0
 python-slugify==8.0.4
-pytz==2024.1
+pytz==2025.1
 PyYAML==6.0.2
 pyzmq==26.3.0
-referencing==0.35.1
+referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
-rich==13.7.1
-rich-argparse==1.5.2
-rpds-py==0.20.0
+rich==13.9.4
+rich-argparse==1.6.0
+rpds-py==0.22.3
+rsa==4.9
 scikit-learn==1.6.1
 scipy==1.15.2
 seaborn==0.13.2
 Send2Trash==1.8.3
 sentry-sdk==2.24.0
-setproctitle==1.3.3
+setproctitle==1.3.4
 setuptools==66.1.1
-six==1.16.0
+six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.6
-SQLAlchemy==1.4.53
+SQLAlchemy==1.4.54
 SQLAlchemy-JSONField==1.0.2
 sqlalchemy-stubs==0.4
 SQLAlchemy-Utils==0.41.2
-sqlparse==0.5.1
+sqlparse==0.5.3
 stack-data==0.6.3
 tabulate==0.9.0
-tenacity==8.5.0
-termcolor==2.4.0
+tenacity==9.0.0
+termcolor==2.5.0
 terminado==0.18.1
 text-unidecode==1.3
 threadpoolctl==3.6.0
-time-machine==2.15.0
+time-machine==2.16.0
 tinycss2==1.4.0
 toml==0.10.2
 tomli==1.2.3
@@ -240,12 +246,13 @@ traitlets==5.14.3
 types-python-dateutil==2.9.0.20241206
 types-pytz==2025.2.0.20250326
 typing_extensions==4.12.2
-tzdata==2024.1
+tzdata==2025.1
 uc-micro-py==1.0.3
 unicodecsv==0.14.1
-universal_pathlib==0.2.2
+universal_pathlib==0.2.6
 uri-template==1.3.0
-urllib3==2.2.2
+uritemplate==4.1.1
+urllib3==2.3.0
 virtualenv==20.30.0
 wandb==0.19.8
 wcwidth==0.2.13
@@ -253,8 +260,8 @@ webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
 Werkzeug==2.2.3
-wirerope==0.4.7
-wrapt==1.16.0
-WTForms==3.1.2
-yarl==1.9.4
-zipp==3.20.0
+wirerope==1.0.0
+wrapt==1.17.2
+WTForms==3.2.1
+yarl==1.18.3
+zipp==3.21.0
